@@ -365,7 +365,7 @@ ContextImp::ContextImp(Object &glob, ExecState *exec, Object &thisV, CodeType ty
 
   // create and initialize activation object (ECMA 10.1.6)
   if (type == FunctionCode || type == AnonymousCode ) {
-    activation = Object(new ActivationImp(exec));
+    activation = Object(new ActivationImp(this));
     variable = activation;
   } else {
     activation = Object();
